fixing wrong syntax

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   [class]="scrollingDown ? 'py-2' : 'py-4'"
 >
   <div class="container">
-    <a class="navbar-brand text-uppercase fw-bold" routerLink="home"
+    <a class="navbar-brand text-uppercase fw-bold" routerLink="/home"
       >start framework</a
     >
     <button
@@ -23,7 +23,7 @@
           <a
             class="nav-link px-2"
             aria-current="page"
-            routerLink="about"
+            routerLink="/about"
             routerLinkActive="active-link"
             >About</a
           >
@@ -31,7 +31,7 @@
         <li class="nav-item">
           <a
             class="nav-link px-2"
-            routerLink="portfolio"
+            routerLink="/portfolio"
             routerLinkActive="active-link"
             >Portfolio</a
           >
@@ -39,7 +39,7 @@
         <li class="nav-item">
           <a
             class="nav-link px-2"
-            routerLink="contact"
+            routerLink="/contact"
             routerLinkActive="active-link"
             >Contact</a
           >
